# mini-rust-compiler

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  flake.nix  gdb_commands.txt  input.lex  lex.yy.c  result  test.lex
.cache/clangd/index/: ast_driver.cpp.9F669603437BB9CC.idx  ast_driver.cpp.AC4CBC50085BB895.idx  ast_driver.h.03575F98C65BDD46.idx  ast_driver.h.359D1F982EDE2FEA.idx  core.h.006CC6DF161E02DA.idx  driver.h.A5875424C49D63F3.idx  driver.h.ABF48E7380248D7A.idx  expr.h.D4511542B3506A41.idx  item.h.23FED7C4205B2592.idx  lexer.cpp.5ABF6D5670098CF0.idx  lexer.cpp.68F9ECDE66AA9294.idx  lexer.cpp.BC5CB6CD68E49748.idx  lexer.h.364A168C84880340.idx  location.hh.6D02BFD326DFAA06.idx  location.hh.88E9909EF87EC07F.idx  main.cpp.58648F7189AB3350.idx  main.cpp.813F86405039736E.idx  name_resolution_visitor.h.5C4CC9F0FA0E72BE.idx  name_resolution_visitor.h.C1E0F6CC6CC03718.idx  node.h.439699EAC06ED854.idx  node.h.C5E4481080371EE9.idx  parser.cpp.168741313A93E6B5.idx  parser.cpp.771ED34D30117FB6.idx  parser.cpp.D1F67290DB36CE6A.idx  parser.h.5246E943592FCFF0.idx  parser.h.89A65AA500BF3458.idx  parser.h.BA869A4CD957D68F.idx  print_visitor.h.4AC311F136F3B38D.idx  print_visitor.h.69259332D637E669.idx  scanner.h.A46A213FBDD852ED.idx  scanner.h.FD1EEFE1D2266FFA.idx  stmt.h.E5CEC6E2066F312D.idx  util.h.36034CBD7150099E.idx  util.h.808E333C62D6464E.idx  visitor.h.AC728323FC6C5046.idx  visitor.h.EC3573C170D7188A.idx
.zed/: tasks.json
src/: driver.h  main.cpp
src/ast/: ast.h  ast_driver.cpp  ast_driver.h  ast_node.h  namespace_tree.h  node.h
src/ast/lexer/: lexer.l  scanner.h
src/ast/nodes/: core.h  expr.h  function_definition_node.h  item.h  program_node.h  stmt.h  type.h
src/ast/parser/: parser.y  parser_rules.cpp  parser_rules.h
src/ast/visitors/: apply_infererence_visitor.h  lower_ast_visitor.h  name_resolution_visitor.h  namespace_tree_builder.h  print_visitor.h  visitor.h
src/hir/: node.h
src/lexer/: lexer.l  lexer.lex  scanner.h
src/parser/: driver.cpp  driver.h  lexer.l  mri_scanner.h  parser.cc  parser.output  parser.y
src/tast/: infer_ctx.h  node.h  ns_map.h  tast_driver.cpp  tast_driver.h  tast_node.h
src/tast/nodes/: body.h  core.h  expr.h  stmt.h  type.h
src/tast/visitors/: apply_infererence_visitor.h  interpreter_visitor.h  print_visitor.h  tast_visitor.h  typecheck_visitor.h
src/util/: util.h
test/: fib.rs  functions.rs  hello_world.rs  invalid_name.rs  loop.rs  operators.rs
test/demo/: 1-types.rs  2-variables.rs  3-bad-functions.rs  3-functions.rs  4-bad-functions.rs  5-recursive-fib.rs  6-operators.rs  7-loops.rs  modules.rs
test/hello_world/src/: main.rs
test/testfiles/: 1-var.rs
test_old/: basic.rs  branches.rs  declaration.rs  possibly_unassigned.rs
